# cofunc-artifact

./: .gitignore  README.md  config.json
cvm_os/: .config  .gdbinit  .gitignore  CMakeLists.txt  chbuild  config.cmake  download_musl.sh
cvm_os/.gitlab/merge_request_templates/: BugFix.md  Enhancement.md
cvm_os/kernel/: CMakeLists.txt  linux-split-container.patch
cvm_os/kernel/arch/x86_64/boot/amd_sev/: CMakeLists.txt  qemu.patch
cvm_os/kernel/arch/x86_64/boot/amd_sev/init/: header.S
cvm_os/kernel/arch/x86_64/boot/intel_tdx/: CMakeLists.txt  grub-tdx-split-container.patch  qemu-split-container.patch
cvm_os/kernel/arch/x86_64/boot/intel_tdx/init/: header.S
cvm_os/kernel/arch/x86_64/boot/intel_tdx/qemu_patches/: 0001-trace-Split-address-space-and-slot-id-in-trace_kvm_s.patch  0002-HACK-linux-headers-Update-headers-to-pull-in-TDX-API.patch  0003-i386-Introduce-tdx-guest-object.patch  0004-target-i386-Implement-mc-kvm_type-to-get-VM-type.patch  0005-target-i386-Introduce-kvm_confidential_guest_init.patch  0006-i386-tdx-Implement-tdx_kvm_init-to-initialize-TDX-VM.patch  0007-i386-tdx-Get-tdx_capabilities-via-KVM_TDX_CAPABILITI.patch  0008-i386-tdx-Introduce-is_tdx_vm-helper-and-cache-tdx_gu.patch  0009-i386-tdx-Adjust-get_supported_cpuid-for-TDX-VM.patch  0010-i386-kvm-Move-architectural-CPUID-leaf-generation-to.patch  0011-KVM-Introduce-kvm_arch_pre_create_vcpu.patch  0012-i386-tdx-Initialize-TDX-before-creating-TD-vcpus.patch  0013-i386-tdx-Wire-CPU-features-up-with-attributes-of-TD-.patch  0014-i386-tdx-Validate-TD-attributes.patch  0015-i386-tdx-Implement-user-specified-tsc-frequency.patch  0016-i386-tdx-Set-kvm_readonly_mem_enabled-to-false-for-T.patch  0017-i386-tdvf-Introduce-function-to-parse-TDVF-metadata.patch  0018-i386-tdx-Parse-TDVF-metadata-for-TDX-VM.patch  0019-i386-tdx-Skip-BIOS-shadowing-setup.patch  0020-i386-tdx-Don-t-initialize-pc.rom-for-TDX-VMs.patch  0021-i386-tdx-Track-mem_ptr-for-each-firmware-entry-of-TD.patch  0022-i386-tdx-Track-RAM-entries-for-TDX-VM.patch  0023-headers-Add-definitions-from-UEFI-spec-for-volumes-r.patch  0024-i386-tdx-Setup-the-TD-HOB-list.patch  0025-i386-tdx-Add-TDVF-memory-via-KVM_TDX_INIT_MEM_REGION.patch  0026-i386-tdx-Call-KVM_TDX_INIT_VCPU-to-initialize-TDX-vc.patch  0027-i386-tdx-Finalize-TDX-VM.patch  0028-i386-tdx-Disable-SMM-for-TDX-VMs.patch  0029-i386-tdx-Disable-PIC-for-TDX-VMs.patch  0030-i386-tdx-Don-t-allow-system-reset-for-TDX-VMs.patch  0031-hw-i386-add-eoi_intercept_unsupported-member-to-X86M.patch  0032-hw-i386-add-option-to-forcibly-report-edge-trigger-i.patch  0033-i386-tdx-Don-t-synchronize-guest-tsc-for-TDs.patch  0034-i386-tdx-Only-configure-MSR_IA32_UCODE_REV-in-kvm_in.patch  0035-i386-tdx-Skip-kvm_put_apicbase-for-TDs.patch  0036-i386-tdx-Don-t-get-put-guest-state-for-TDX-VMs.patch  0037-docs-Add-TDX-documentation.patch  0038-i386-tdx-Force-x2apic-mode-and-routing-for-TDs.patch  0039-i386-tdx-Skip-KVM_X86_SETUP_MCE-for-TDX-VMs.patch  0040-i386-tdx-Add-property-sept-ve-disable-for-tdx-guest-.patch  (+59 more)
cvm_os/kernel/ipc/: CMakeLists.txt  connection.c  notification.c
cvm_os/kernel/irq/: ipi.c  timer.c
cvm_os/kernel/lib/: CMakeLists.txt  printk.c  radix.c
cvm_os/kernel/mm/: buddy.c  kmalloc.c  mm.c  pgfault_handler.c  uaccess.c  vmspace.c
cvm_os/kernel/object/: cap_group.c  capability.c  irq.c  memory.c  ptrace.c  recycle.c  set_thread_env.c  thread.c  user_fault.c
cvm_os/kernel/sched/: context.c  policy_pb.c  policy_rr.c  sched.c
cvm_os/kernel/split-container/: CMakeLists.txt  snapshot.c  snapshot.h  split_container.c
cvm_os/kernel/syscall/: CMakeLists.txt  syscall.c  syscall_get_system_info.c  syscall_hooks.c
cvm_os/scripts/qemu/: emulate.tpl.sh
cvm_os/user/apps/: .gitlab-ci.yml  CMakeLists.txt
cvm_os/user/chcore-libs/: CMakeLists.txt
cvm_os/user/system-services/: .gitlab-ci.yml  CMakeLists.txt
log/microbenchmarks/cow/: result
patches/: linux.patch  qemu.patch
plots/: fig11.txt  finra.txt
scripts/: build.sh  init_tap.sh  plot_fig11.py  plot_finra.py  run_fig11.sh  run_finra.sh  run_simple.sh
shadow_container/: Dockerfile  build.sh  config.h  kvm_tdx.h  main.c  split_container.h
testcases/: .gitignore  README.md
testcases/environment/: build_all.sh  shutdown_all.sh  start_all.sh
testcases/environment/device/: Dockerfile  build.sh  server.js  start.sh
testcases/environment/file_server/: Dockerfile  build.sh  start.sh
testcases/environment/iperf3/: Dockerfile  build.sh  start.sh
testcases/environment/minio/: start.sh
testcases/environment/parameter/: build.sh  server.js  start.sh
testcases/severifast-assets/certs/: godh.cert
testcases/severifast-assets/config/: vm_config.json
testcases/severifast-assets/hashes/: bzImage-aws-6.4-lz4.hash  initrd-aws-lz4.img.hash
testcases/testcases/fn_js_auth/: Dockerfile  execute.js  package.json  param.json  prewarm.js
testcases/testcases/fn_js_dynamic_html/: Dockerfile  execute.js  package.json  param.json  prewarm.js  template.html
testcases/tools/: Dockerfile  Dockerfile.criu  __criu.sh  __parallel.sh  __start.sh  analyze.py  build.sh  criu.sh  cvm.sh  hugepage.sh  kill.sh  parallel.sh  parameter.py  pull.sh  push.sh  run_task.sh  sc-snapshot.sh  start.sh  template.js  template.py  wait.py
(+453 files in other folders)
